--- a/receiver/Cargo.toml
+++ b/receiver/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-enigo = "0.0.14"
+enigo = { path = "enigo", version = "0.0.14" }
 serde_json = "1.0.83"
