--- a/deck/src-tauri/Cargo.toml
+++ b/deck/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.5", features = ["api-all"] }
 once_cell = "1.13.1"
+chrono = "0.4.23"
 
 [features]
 # by default Tauri runs in production mode
